--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
         <div class="topBar">
             <div class="leftGroup">
                 <img class="logo" alt="SyncUp" src="images/logo.png" draggable="false">
-                <hr class="spacer">
-                <h1 class="syncUp">SyncUp</h1>
+                <img class="syncUp" alt="Sync Header" src="images/header.png" draggable="false">
             </div>
             <img class="account" alt="settings" src="images/account.png" draggable="false">
         </div>
@@ -23,14 +22,17 @@
         <div class="dropDown">
             <img class="dropArrow" src="images/arrow.png" alt="dropDown" draggable="false">
         </div>
-        <div class="searchContainer">
-            <input type="text" class="searchBar" placeholder="Search...">
-            <img class="searchIcon" src="images/search.png" alt="Search" draggable="false">
-        </div>
+        <form id="searchForm">
+            <div class="searchContainer">
+                <input type="text" class="searchBar" placeholder="Enter Url...">
+                <img class="searchIcon" src="images/search.png" alt="Search" draggable="false">
+            </div>
+        </form>
     </section>
 
     <div class="videoBox">
         <h1 class="waiting">...</h1>
+        <div class="iframe"></div>
     </div>
 
     <footer>
