--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     </footer>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="script.js"></script>
 </body>
 </html>
