SEEK Functionality ADDED!
- Seeking added

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <section class="header">
         <div class="topBar">
             <div class="leftGroup">
-                <img class="logo" alt="SyncUp" src="images/logo.png" draggable="false">
+                <img class="logo" alt="SyncUp" src="images/logo.png" draggable="false" onclick="window.location.href='/'">
                 <img class="syncUp" alt="Sync Header" src="images/header.png" draggable="false">
             </div>
             <div class="rightGroup">
