Room Leader Update
- Ability to get room leader on client side from serverside

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
         <hr class="horiztonalSpacer">
     </section>
 
+    <button class="getInfo">Get Info</button>
+
     <section class="searchSection">
         <div class="dropDown">
             <img class="dropArrow" src="images/arrow.png" alt="dropDown" draggable="false">
