--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,13 @@
         <div class="dropDown">
             <img class="dropArrow" src="images/arrow.png" alt="dropDown" draggable="false">
         </div>
-        <form id="searchForm">
-            <div class="searchContainer">
+        <div class="searchContainer">
+            <form id="searchForm" style="display: flex; align-items: center; width: 100%;">
                 <input type="text" class="searchBar" placeholder="Enter Url...">
                 <img class="searchIcon" src="images/search.png" alt="Search" draggable="false">
-            </div>
-        </form>
-    </section>
+            </form>
+        </div>
+    </section>    
 
     <div class="videoBox">
         <h1 class="waiting">...</h1>
