--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,6 @@
                 <img class="syncUp" alt="Sync Header" src="images/header.png" draggable="false">
             </div>
             <div class="rightGroup">
-                <button class="newRoom" onclick="window.location.href='/new-room'">Create</button>
                 <img class="account" alt="settings" src="images/account.png" draggable="false">
             </div>
         </div>
@@ -33,11 +32,18 @@
                 <img class="searchIcon" src="images/search.png" alt="Search" draggable="false">
             </form>
         </div>
+        <button class="newRoom" onclick="window.location.href='/new-room'">Create</button>
     </section>    
 
-    <div class="videoBox">
-        <h1 class="waiting">...</h1>
-        <div class="iframe"></div>
+    <div class="videoContainer">
+        <div class="videoBox">
+            <h1 class="waiting">...</h1>
+            <div class="iframe"></div>
+        </div>
+
+        <div class="videoTitle">
+            <h1 class="videoTitleText">...</h1>
+        </div>
     </div>
 
     <footer>
