--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="videoTitle">
-            <h1 class="videoTitleText">...</h1>
+            <h1 class="videoTitleText"></h1>
         </div>
     </div>
 
