--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,10 @@
         <hr class="horiztonalSpacer">
     </section>
 
-    <button class="getInfo">Get Info</button>
+    <div class="subTopBar">
+        <div id="gap"></div>
+        <button class="newRoom" onclick="window.location.href='/new-room'">Create Room</button>
+    </div>
 
     <section class="searchSection">
         <div class="dropDown">
@@ -32,7 +35,6 @@
                 <img class="searchIcon" src="images/search.png" alt="Search" draggable="false">
             </form>
         </div>
-        <button class="newRoom" onclick="window.location.href='/new-room'">Create</button>
     </section>    
 
     <div class="videoContainer">
