--- a/public/room.html
+++ b/public/room.html
@@ -51,9 +51,9 @@
     
         <div class="rightContainer">
             <div class="boxTextBackground">
-                <h2 class="boxText">Chat</h2>
+                <h2 class="boxText">Queue</h2>
             </div>
-            <div class="chatContainer"></div>
+            <div class="queueContainer"></div>
         </div>
     </div>
 
