--- a/public/room.html
+++ b/public/room.html
@@ -53,7 +53,14 @@
             <div class="boxTextBackground">
                 <h2 class="boxText">Queue</h2>
             </div>
-            <div class="queueContainer"></div>
+            <div class="queueContainer">
+                <div class="thumbnail">
+                    <div class="thumbnailSettings">
+                        <div class="spacer"></div>
+                        <img class="exitThumbnail" src="images/exit.png" alt="exit" draggable="false">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
