--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,17 @@
     <div class="videoContainer">
         <div class="videoBox">
             <h1 class="waiting">...</h1>
-            <div class="iframe"></div>
+            <div class="iframe">
+            </div>
         </div>
 
         <div class="videoTitle">
+            <div class="controls">
+                <button class="play"></button>
+                <input type="range" class="seekBar" value="0" min="0" max="100">
+                <input type="range" class="volume" value="0" min="0" max="100">
+                <button class="fullscreen"></button>
+            </div>
             <h1 class="videoTitleText"></h1>
         </div>
     </div>
