--- a/public/room.html
+++ b/public/room.html
@@ -63,5 +63,6 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="script.js"></script>
+    <script src="media.js"></script>
 </body>
 </html>
