--- a/public/room.html
+++ b/public/room.html
@@ -33,7 +33,8 @@
         <div id="searchSection" class="flex justify-center w-full">
             <div id="searchContainer"
                 class="flex items-center bg-gray-300 dark:bg-gray-200 p-2 
-              4xl:w-1/6 3xl:w-1/5 lg:w-2/6 md:w-3/6 sm:w-1/2 rounded-lg shadow-lg transition-all duration-300 ease-in-out 4xl:focus-within:w-1/5 3xl:focus-within:w-1/4">
+                    4xl:w-1/6 3xl:w-1/5 lg:w-2/6 md:w-3/6 sm:w-1/2 rounded-lg shadow-lg transition-all duration-300 
+                    ease-in-out 4xl:focus-within:w-1/5 3xl:focus-within:w-1/4">
                 <form id="searchForm" class="flex items-center justify-between w-full">
                     <input type="text" id="searchBar"
                         class="text-black p-1 w-full bg-transparent focus:outline-none rounded-lg mr-2"
