--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,11 @@
             </div>
         </div>
 
-        <div class="flex justify-center">
+        <div id="downArrow" class="flex justify-center">
             <img alt="arrow" class="w-32 h-32 mt-32 dark:invert cursor-pointer" 
                 onClick="window.scrollTo({left:0, top:document.body.scrollHeight, behavior:'smooth'})" 
                 src="images/arrow.svg" draggable="false">
         </div>
-
 
     </div>
 
