--- a/public/room.html
+++ b/public/room.html
@@ -10,7 +10,7 @@
 </head>
 
 <body id="body" class="h-screen bg-[#d2d3db] flex flex-col dark:bg-[#0f0f0f]">
-    <div id="topBar" class="bg-[#d2d3db] flex justify-between items-center h-12 w-full dark:bg-[#0f0f0f]">
+    <div id="topBar" class="bg-[#d2d3db] select-none flex justify-between items-center h-12 w-full dark:bg-[#0f0f0f]">
         <div class="flex">
             <img id="logo" class="w-12 h-12 dark:invert cursor-pointer" alt="SyncUp" src="images/logo.svg" draggable="false"
                 onclick="window.location.href='/'">
