--- a/public/room.html
+++ b/public/room.html
@@ -101,7 +101,7 @@
                     </svg>
                 </button>
                 <label id="time" class="text-black dark:text-white">00:00</label>
-                <input id="seekBar" type="range" class="w-full bg-gray-600 dark:bg-white rounded-md cursor-pointer" value="0" min="0"
+                <input id="seekBar" type="range" class="w-full dark:bg-white rounded-md cursor-pointer" value="0" min="0"
                     max="100">
                 <div class="relative">
                     <button id="volume" class="text-white bg-gray-800 p-1 rounded-md hover:bg-gray-600">
