--- a/public/room.html
+++ b/public/room.html
@@ -170,7 +170,12 @@
 
     <div id="chatBox" class="hidden fixed right-0 bottom-0 items-center flex">
         <div class="bg-gray-900 dark:bg-gray-100 h-96 w-64 rounded-lg m-2 p-3">
-            <div id="messages" class="w-full h-9/10 rounded-lg overflow-y-auto">          
+        <div class="absolute flex right-2 top-3 w-12 h-5 justify-center items-center">
+            <img src="images/user.svg" class="h-5" alt="userCount" draggable="false"/>
+            <span id="userCount" class="text-black font-opensans select-none ml-px">5</span>
+        </div>
+
+            <div id="messages" class="w-full h-8.5/10 mt-4 rounded-lg overflow-y-auto">          
                 <!-- New messages go here... --> 
             </div>
 
@@ -180,7 +185,7 @@
                     class="focus:outline-solid focus:outline-green-500 mt-2 bg-gray-50 h-10 w-8/10 
                             overflow-hidden dark:bg-gray-700 text-black dark:text-white rounded-md mb-2 p-2.5">
                     <button type="submit" class="bg-green-500 hover:bg-green-600 w-10 h-10 rounded-lg flex m-auto items-center p-2">
-                        <img src="images/send.svg" class="h-10" alt="closeAlertSvg" draggable="false"/>
+                        <img src="images/send.svg" class="h-10" alt="sendMessage" draggable="false"/>
                     </button>
                 </form>
             </div>
