--- a/public/room.html
+++ b/public/room.html
@@ -79,7 +79,7 @@
                 <div id="iframe" class="w-full h-full">
             </div>
         </div>
-            <div id="queueContainer" class="hidden sm:block overflow-y-auto h-full 4xl:w-96 sm:w-64 bg-gray-900 dark:bg-black rounded-lg px-2 mb-2">
+            <div id="queueContainer" class="hidden sm:block overflow-y-auto h-full 4xl:w-96 sm:w-64 bg-gray-900 dark:bg-black rounded-lg px-2">
                 <div class="flex justify-between">
                     <h2 id="boxText" class="text-white font-bold text-2xl p-2 font-opensans select-none">Queue</h2>
                     <button id="skip" class="px-1" onclick="skipVideo()">
@@ -142,7 +142,7 @@
     </div>
 
     <div class="w-full h-full flex justify-center">
-        <div id="mQueueContainer" class="sm:hidden overflow-y-auto w-3/4 h-5/6 max-h-96 mt-5 bg-gray-900 dark:bg-black rounded-lg px-2 mb-2">
+        <div id="mQueueContainer" class="sm:hidden overflow-y-auto w-3/4 h-5/6 max-h-96 mt-5 bg-gray-900 dark:bg-black rounded-lg px-2">
             <div class="flex justify-between">
                 <h2 id="boxText" class="text-white font-bold text-2xl p-2 font-opensans">Queue</h2>
                 <button id="skip" class="px-1" onclick="skipVideo()">
@@ -171,8 +171,8 @@
     <div id="chatBox" class="hidden fixed right-0 bottom-0 items-center flex">
         <div class="bg-gray-900 dark:bg-gray-100 h-96 w-64 rounded-lg m-2 p-3">
         <div class="absolute flex right-2 top-3 w-12 h-5 justify-center items-center">
-            <img src="images/user.svg" class="h-5" alt="userCount" draggable="false"/>
-            <span id="userCount" class="text-black font-opensans select-none ml-px">5</span>
+            <img src="images/user.svg" class="h-5 invert dark:invert-0" alt="userCount" draggable="false"/>
+            <span id="userCount" class="text-white dark:text-black font-opensans select-none ml-px">5</span>
         </div>
 
             <div id="messages" class="w-full h-8.5/10 mt-4 rounded-lg overflow-y-auto">          
